ADD: Se agregan cambios a la rama de desarrollo se termina los commands de los modulos orders y products